<resources>
    <string name="error_unknown_error">Unknown Error</string>
    <string name="error_required_username">Username required</string>
    <string name="error_username_too_long">Username is too long (max 64 char)</string>
    <string name="error_required_password">Password required</string>
    <string name="error_required_confirm_password">Confirm Password required</string>
    <string name="error_required_email">Email Address required</string>
    <string name="error_email_not_correct">Email Address is invalid</string>
    <string name="error_required_phone_number">Phone Number required</string>
    <string name="error_required_confirm_password_match">Password and Confirm Password does not match</string>
    <string name="error_password_greater_than_6">Password must be greater than 6</string>

    <string name="app_name">ChatChat</string>
    <string name="log_in">Log In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password_q">Forgot Password?</string>
    <string name="or_register_q">or Register?</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="register_note"><b>Note</b>: Make sure your email address is correct because we will send a confirm link to your email. Thank you!</string>
    <string name="get_photo_from_camera_or_gallery">Get photo from camera or gallery</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="register_success">Register successful. Please confirm your email address.</string>
    <string name="clear">Clear</string>
    <string name="loading">Loading…</string>
    <string name="logout">Logout</string>
    <string name="hi">Hi</string>
    <string name="search_user">Search user</string>
</resources>
