<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="?attr/actionBarSize"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginBottom="16dp"
                    android:clipToPadding="false"
                    app:cardCornerRadius="60dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_user_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_user_hint" />

                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_register_username"
                    style="@style/PrimaryEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:drawableStart="@drawable/ic_user"
                    android:hint="@string/username"
                    android:inputType="textCapWords" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_register_password"
                    style="@style/PrimaryEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_register_confirm_password"
                    style="@style/PrimaryEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_register_email"
                    style="@style/PrimaryEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_register_phone_number"
                    style="@style/PrimaryEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:drawableStart="@drawable/ic_smart_phone"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:text="@string/register_note"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_light" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register_send"
                    style="@style/PrimaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register" />

            </LinearLayout>

        </ScrollView>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="start|top"
            android:src="@drawable/ic_arrow_back" />

    </RelativeLayout>

    <include layout="@layout/bottom_sheet_media_picker" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>